1. Log4j2 libraries and configuration. 2. Maven Rewrite Plugin log4j to slf4j.